--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 
     <div class="main-container">
         <div class="navigation" id="navigation">
-            <div class="logo-section">
-                <div class="logo-img">
-                    <img src="./img/logo.png" alt="">
+            <a href="" style="text-decoration: none; color: inherit;">
+                <div class="logo-section">
+                    <div class="logo-img">
+                        <img src="./img/logo.png" alt="">
+                    </div>
+                    <h1>LuminoX</h1>
                 </div>
-                <h1>LuminoX</h1>
-            </div>
+            </a>
             <div class="navlinks">
                 <li>Company</li>
                 <li>News</li>
